# iwatchme-skills

./: .gitignore  README.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
skills/iwatchme-deep-research/: SKILL.md
skills/iwatchme-markdown-to-styled-docx/: SKILL.md  pyproject.toml
skills/iwatchme-markdown-to-styled-docx-pdf/: SKILL.md  pyproject.toml
skills/iwatchme-markdown-to-styled-docx-pdf/examples/: nested-work-experience.md
skills/iwatchme-markdown-to-styled-docx-pdf/scripts/: build_styled_docx.py  md_to_docx.py  render_docx.sh
skills/iwatchme-markdown-to-styled-docx/scripts/: bootstrap_uv.sh  build_styled_docx.py  md_to_docx.py  render_docx.sh
skills/iwatchme-obsidian-blog-publisher/: SKILL.md  pyproject.toml
skills/iwatchme-obsidian-blog-publisher/scripts/: bootstrap_uv.sh  process_blog.py  process_blog.sh
skills/iwatchme-technical-writing/: SKILL.md
skills/markdown-to-styled-docx/: SKILL.md  pyproject.toml
skills/markdown-to-styled-docx-pdf/: SKILL.md  pyproject.toml
skills/markdown-to-styled-docx-pdf/scripts/: bootstrap_uv.sh  build_styled_docx.py  render_docx.sh
skills/markdown-to-styled-docx/scripts/: build_styled_docx.py  md_to_docx.py
